--- a/Resource/template/admin/history_list.twig
+++ b/Resource/template/admin/history_list.twig
@@ -76,6 +76,7 @@ $(function () {
 
 {% block main %}
 <form name="form1" id="form1" method="post" action="">
+    <input type="hidden" name="_token" value="{{ csrf_token(constant('Eccube\\Common\\Constant::TOKEN_NAME')) }}">
     <div class="c-outsideBlock__contents mb-5">
         {% if pagination %}
             <span class="font-weight-bold ml-2">{{ 'admin.mailmagazine.history.search_count'|trans({'%count%':pagination.totalItemCount}) }}</span>
